--- a/.hintrc
+++ b/.hintrc
@@ -14,6 +14,15 @@
       {
         "nested-interactive": "off"
       }
+    ],
+    "no-inline-styles": "off",
+    "compat-api/css": [
+      "default",
+      {
+        "ignore": [
+          "max-height: fit-content"
+        ]
+      }
     ]
   }
 }
